# mk-user-crud-service

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  db.sqlite  docker-compose.yaml  logging.ini  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: teste.yml
src/: app.py  main.py  rest.py  settings.py
src/adapters/: middlewares_adapter.py  redis_adapter.py
src/database/: __init__.py  base_model.py  models.py
src/database/migrations/: env.py
src/database/migrations/versions/: 6d0dae042dba_initial_migration.py  bfed658d6467_initial_migration.py
src/ports/: cache_interface.py
src/utils/: logger.py
tests/users/: conftest.py  user_http_test.py  user_service_test.py
